--- a/Camera_caliberation.ipynb
+++ b/Camera_caliberation.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -40,13 +40,12 @@
       ],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n"
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "7Nk1lFeOrLeK"
       },
@@ -58,32 +57,10 @@
         "import matplotlib.pyplot as plt\n",
         "import math\n",
         "import os\n",
-        "import scipy.optimize \n",
+        "import scipy.optimize\n",
         "from copy import deepcopy\n",
         "from google.colab.patches import cv2_imshow\n",
         "import glob\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 43,
-      "metadata": {
-        "id": "xN6vTwxHsWyR"
-      },
-      "outputs": [],
-      "source": [
-        "# img=cv.imread('/content/IMG_20170209_042606.jpg')\n",
-        "# h= 6\n",
-        "# w =9\n",
-        "# criteria = (cv.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 30, 0.001)\n",
-        "# gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-        "# ret,corners=cv2.findChessboardCorners(gray, (w, h), None)\n",
-        "# # cv2.drawChessboardCorners(img, (w, h), corners, True)\n",
-        "# # cv2_imshow(img)\n",
-        "# # print(corners)\n",
-        "# corners2 = cv2.cornerSubPix(gray, corners, (11,11), (-1,-1), criteria)\n",
-        "# corners2 = corners2.reshape(-1,2)\n",
-        "\n"
       ]
     },
     {
@@ -97,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "vVqmo39rp0rZ"
       },
@@ -146,19 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
-      "metadata": {
-        "id": "SPuNwCznwP1v"
-      },
-      "outputs": [],
-      "source": [
-        "# print(worldpoints_3D[0])\n",
-        "# print(imgpoints[0])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "pOVTg6ZKjCvl"
       },
@@ -190,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "meSdCrP2vzEc"
       },
@@ -206,8 +171,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Getting the Homography**"
+      ],
+      "metadata": {
+        "id": "6jqdjpkSO9bw"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -235,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "fTEExZQN5xSu"
       },
@@ -243,13 +217,12 @@
       "source": [
         "def get_vij(h1,h2):\n",
         "  vij=np.array([h1[0]*h2[0], h1[0]*h2[1]+h1[1]*h2[1],h1[1]*h2[1], h1[2]*h2[0]+h1[0]*h2[2], h1[2]*h2[1]+h1[1]*h2[2], h1[2]*h2[2]])\n",
-        "  # Vij = np.array([ hi[0]*hj[0], hi[0]*hj[1] + hi[1]*hj[0], hi[1]*hj[1], hi[2]*hj[0] + hi[0]*hj[2], hi[2]*hj[1] + hi[1]*hj[2], hi[2]*hj[2] ])\n",
         "  return vij.T"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "QosLJJY65J_F"
       },
@@ -271,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "CAUtSTZU2si5"
       },
@@ -279,7 +252,7 @@
       "source": [
         "def get_B(Hset):\n",
         "  v=get_V(Hset)\n",
-        "  print(len(v))\n",
+        "  # print(len(v))\n",
         "  U,sig,V=np.linalg.svd(v)\n",
         "  b=V[-1,:]\n",
         "  B = np.zeros((3,3))\n",
@@ -297,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -332,8 +305,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Getting the A matrix**"
+      ],
+      "metadata": {
+        "id": "ri4y09CgPP4B"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "yD23HZkuUP5i"
       },
@@ -344,7 +326,7 @@
         "  lamb = B[2,2] - (B[0,2]**2 + v0 * (B[0,1] * B[0,2] - B[0,0] * B[1,2]))/B[0,0]\n",
         "  alpha = np.sqrt(lamb/B[0,0])\n",
         "  beta = np.sqrt(lamb * (B[0,0]/(B[0,0] * B[1,1] - B[0,1]**2)))\n",
-        "  gamma = -(B[0,1] * alpha**2 * beta) / lamb \n",
+        "  gamma = -(B[0,1] * alpha**2 * beta) / lamb\n",
         "  u0 = (gamma * v0 / beta) - (B[0,2] * alpha**2 / lamb)\n",
         "  A = np.array([[alpha, gamma, u0], [0, beta, v0], [0, 0, 1]])\n",
         "  return A"
@@ -352,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "EcFIkj9oi3I7"
       },
@@ -363,22 +345,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
-      "metadata": {
-        "id": "wmoPqODRjinr"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "u-KHLs_hd0Uv"
       },
       "outputs": [],
       "source": [
-        "def getRotationAndTrans(A, Hset):\n",
+        "def getRotationAndTrans(A, Hset): # Function for obtaining the Rotation and Translation matrix\n",
         "  RT = []\n",
         "  i=0\n",
         "  for H in Hset:\n",
@@ -400,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -427,110 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "b843Rg6IkHZj",
-        "outputId": "cffb0a6a-068f-446e-f05d-d36e053fda71"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[array([[-9.99389258e-01,  3.35353795e-02, -1.33780717e-02,\n",
-              "          2.47724099e+01],\n",
-              "        [-3.48819449e-02, -9.42605786e-01,  3.26823769e-01,\n",
-              "          1.29135167e+01],\n",
-              "        [-2.08826625e-03,  3.27093570e-01,  9.43199876e-01,\n",
-              "          1.94321511e+02]]),\n",
-              " array([[-9.99020404e-01,  3.41584070e-02,  2.89631537e-02,\n",
-              "          2.82739442e+01],\n",
-              "        [-2.74393393e-02, -9.82225400e-01,  1.88229948e-01,\n",
-              "          5.39266552e+00],\n",
-              "        [ 3.47176436e-02,  1.87227456e-01,  9.82200500e-01,\n",
-              "          2.12842046e+02]]),\n",
-              " array([[-9.96734195e-01, -4.27172823e-03,  8.08582073e-02,\n",
-              "          3.72524761e+01],\n",
-              "        [-1.70842689e-02, -9.60082418e-01, -2.96961370e-01,\n",
-              "          2.76084049e+01],\n",
-              "        [ 7.89244692e-02, -2.97596117e-01,  9.56873997e-01,\n",
-              "          2.88333757e+02]]),\n",
-              " array([[-9.99975914e-01, -6.15461976e-03, -5.10903205e-05,\n",
-              "          2.62432319e+01],\n",
-              "        [ 6.94048350e-03, -1.00205445e+00, -2.34965308e-03,\n",
-              "          3.79636968e+01],\n",
-              "        [-3.47094078e-05, -2.34992330e-03,  1.00207303e+00,\n",
-              "          2.45495621e+02]]),\n",
-              " array([[-9.99753821e-01, -1.26977609e-02, -1.96076567e-02,\n",
-              "          2.89977355e+01],\n",
-              "        [ 9.72037061e-03, -1.00054051e+00,  3.60825410e-02,\n",
-              "          2.80953792e+01],\n",
-              "        [-1.99452357e-02,  3.58381038e-02,  1.00041763e+00,\n",
-              "          1.84087466e+02]]),\n",
-              " array([[-9.99514173e-01,  2.48145787e-02,  1.49473170e-02,\n",
-              "          2.78882701e+01],\n",
-              "        [-2.59586669e-02, -9.99709986e-01,  8.89017495e-02,\n",
-              "          5.51842311e+01],\n",
-              "        [ 1.72500953e-02,  8.85166995e-02,  9.99868453e-01,\n",
-              "          3.57519144e+02]]),\n",
-              " array([[-9.97334648e-01,  4.04743804e-02, -6.25498035e-02,\n",
-              "          2.65216510e+01],\n",
-              "        [-6.12018119e-02, -8.97072895e-01,  4.36996813e-01,\n",
-              "          2.41933069e+00],\n",
-              "        [-3.97232709e-02,  4.39776748e-01,  8.97158985e-01,\n",
-              "          1.85533945e+02]]),\n",
-              " array([[-9.97034836e-01, -2.99208496e-03, -7.64753028e-02,\n",
-              "          2.83751334e+01],\n",
-              "        [-3.37387299e-02, -8.52387830e-01,  5.18051318e-01,\n",
-              "         -1.11570893e-01],\n",
-              "        [-6.91609257e-02,  5.19384443e-01,  8.49759412e-01,\n",
-              "          1.74288895e+02]]),\n",
-              " array([[-6.79002395e-01, -1.06483299e-01,  7.25759752e-01,\n",
-              "          2.06937697e+01],\n",
-              "        [ 1.43958712e-01, -9.93638734e-01, -2.73380368e-02,\n",
-              "          2.37369080e+01],\n",
-              "        [ 7.19883072e-01,  7.26322729e-02,  6.90012279e-01,\n",
-              "          2.32214333e+02]]),\n",
-              " array([[-8.82529001e-01, -5.51367914e-02,  4.65058856e-01,\n",
-              "          5.06247611e+01],\n",
-              "        [ 3.82814163e-02, -9.94096197e-01, -4.59287273e-02,\n",
-              "          3.24692880e+01],\n",
-              "        [ 4.68697233e-01, -2.27598932e-02,  8.79429437e-01,\n",
-              "          2.22979429e+02]]),\n",
-              " array([[ 7.85092437e-01, -3.46281816e-02,  6.13451551e-01,\n",
-              "         -1.29014629e+01],\n",
-              "        [ 1.15158411e-01,  9.85567712e-01, -7.20239754e-02,\n",
-              "         -4.41443571e+01],\n",
-              "        [-6.08579005e-01,  1.18582163e-01,  7.77749483e-01,\n",
-              "          2.43978774e+02]]),\n",
-              " array([[ 7.30381919e-01, -6.51160012e-02,  6.76407948e-01,\n",
-              "         -2.31286595e+01],\n",
-              "        [ 1.60790043e-01,  9.84386266e-01, -6.09274240e-02,\n",
-              "         -4.73902526e+01],\n",
-              "        [-6.63843969e-01,  1.42602502e-01,  7.29447934e-01,\n",
-              "          2.44297291e+02]]),\n",
-              " array([[ 9.13301497e-01, -3.20057341e-02,  4.03620373e-01,\n",
-              "         -1.93863218e+01],\n",
-              "        [ 5.71937940e-02,  9.95261679e-01, -2.35455425e-02,\n",
-              "         -3.94713350e+01],\n",
-              "        [-4.03248367e-01,  3.99121238e-02,  9.10804510e-01,\n",
-              "          2.57287211e+02]])]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 57
-        }
-      ],
-      "source": [
-        "RT"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -567,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "PWnJxOcAkk3n"
       },
@@ -588,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -625,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "9EalFjxlkkve"
       },
@@ -640,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -680,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -707,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "0SsnZQppkksw"
       },
@@ -748,15 +618,12 @@
         "  return np.array(error)\n",
         "\n",
         "\n",
-        "\n",
-        "      \n",
-        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -822,23 +689,27 @@
         "    points.append(rp)\n",
         "  error=np.array(error)\n",
         "  err_avg=np.sum(error)/(13*54)\n",
-        "  return err_avg,points\n",
-        "\n",
-        "\n",
-        "\n",
-        "      \n",
-        "\n",
-        "\n"
+        "  return err_avg,points"
       ],
       "metadata": {
         "id": "lGy6zp5XvN3q"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**Geting the A and K matrix for undistorting the images**"
+      ],
+      "metadata": {
+        "id": "mo9YIZRnPu9Y"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -864,8 +735,7 @@
         "RT_n=getRotationAndTrans(A_new,Hset)\n",
         "error,points=reproj(A_new,K_new,RT_n,imgpoints, worldpoints_3D)\n",
         "K = np.array(A_new, np.float32).reshape(3,3)\n",
-        "D = np.array([K_new[0],K_new[1], 0, 0] , np.float32)\n",
-        "    \n"
+        "D = np.array([K_new[0],K_new[1], 0, 0] , np.float32)"
       ]
     },
     {
@@ -884,8 +754,17 @@
       "metadata": {
         "id": "bSgj1xY-2TVN"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Final Results**"
+      ],
+      "metadata": {
+        "id": "88Ua4h22P4iw"
+      }
     },
     {
       "cell_type": "code",
@@ -902,7 +781,7 @@
         "id": "Olq2z0RO6Yac",
         "outputId": "1f664236-ed54-4d86-922a-d4664121ad2a"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1066,9 +945,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "mount_file_id": "1zGnpDluwhF9oXgTbxu8xRlO0CJfB54BF",
-      "authorship_tag": "ABX9TyMU3rq5aQHPtUolOkMzMKwq",
+      "authorship_tag": "ABX9TyNMKIGbH3y6eHPDc0j3E1Ms",
       "include_colab_link": true
     },
     "kernelspec": {
